Removed transactions and updated handlers
